<resources>
    <string name="app_name">GokulPOS</string>
    <string name="hint_UserName">Username</string>
    <string name="hint_UPC">UPC</string>
    <string name="hint_Name">Name</string>
    <string name="hint_Username">Username</string>
    <string name="hint_MinAge">Min. Age</string>
    <string name="hint_Size">Size</string>
    <string name="hint_Pack">Pack</string>
    <string name="hint_Tax">Tax/es</string>
    <string name="hint_Type">Type</string>
    <string name="hint_Margin">Margin</string>
    <string name="hint_Markup">Markup</string>
    <string name="hint_UnitCost">Unit Cost</string>
    <string name="hint_UnitPrice">Unit Price</string>
    <string name="hint_CategoryName">Category Name</string>
    <string name="hint_ContactName">Contact Name</string>
    <string name="hint_Address">Address</string>
    <string name="hint_City">City</string>
    <string name="hint_Country">Country</string>
    <string name="hint_Zip">Zip</string>
    <string name="hint_State">State</string>
    <string name="hint_Value">Value</string>
    <string name="hint_BrandName">Brand Name</string>
    <string name="hint_ClassName">Class Name</string>
    <string name="hint_GroupName">Group Name</string>
    <string name="hint_Manufacturer">Manufacturer</string>
    <string name="hint_MinPrice">Min. Price</string>
    <string name="hint_SalePrice">Sale Price</string>
    <string name="hint_ItemType">Item Type</string>
    <string name="hint_MSRP">MSRP</string>
    <string name="hint_BuyDown">Buy Down</string>
    <string name="hint_BuyCase">Buy Us Case</string>
    <string name="hint_UnitInCase">Unit In Case</string>
    <string name="hint_CaseCost">Case Cost</string>
    <string name="hint_CasePrice">Case Price</string>
    <string name="hint_Search">Search</string>
    <string name="hint_Password">*******</string>
    <string name="hint_ItemSku">Item SKU</string>
    <string name="hint_ItemName">Item Name</string>
    <string name="hint_Price">Price</string>
    <string name="hint_Cost">Cost</string>
    <string name="hint_CaseQty">Case Qty</string>
    <string name="hint_CaseUnits">Case Units</string>
    <string name="hint_LooseQty">Loose Qty</string>
    <string name="hint_TotalQty">Total Qty</string>
    <string name="hint_ReOrderLevel">Re-Order Level</string>
    <string name="hint_MobileNo">Mobile No.</string>
    <string name="hint_ContactNo">Contact No.</string>
    <string name="hint_UOMType">UOM Type</string>
    <string name="hint_SKU">SKU</string>
    <string name="hint_ReOrder">Re-Order</string>
    <string name="hint_DrivingLicense">Driving License</string>
    <string name="hint_Pin">PIN</string>
    <string name="hint_ConfirmPin">Confirm PIN</string>
    <string name="hint_CardNumber">Card Number</string>
    <string name="hint_ConfirmPassword">Confirm Password</string>
    <string name="hint_GenderOther">Other</string>
    <string name="hint_Action">Action</string>
    <string name="hint_TenderDescription">Tender Description</string>
    <string name="hint_ExchangeRate">Exchange Rate</string>
    <string name="hint_ConversionRate">Conversion Rate</string>
    <string name="hint_CurrencySymbol">Currency Symbol</string>
    <string name="hint_MinPaymentAmount">Min. Payment Amount</string>
    <string name="hint_SearchBy">Search by SKU/Name/UPC</string>
    <string name="hint_PurchaseOrderNo">PurchaseOrder Id</string>
    <string name="hint_Dispatch">Dispatch</string>
    <string name="hint_PartiallyReceived">Partially Received</string>
    <string name="hint_FullyReceived">Fully Received</string>
    <string name="hint_SearchByPOrder">Search by Purchase Order</string>
    <string name="hint_InvoiceId">Invoice Id</string>
    <string name="hint_VendorName">Vendor Name</string>
    <string name="hint_Amount">Amount</string>
    <string name="hint_ShipTo">Ship To</string>
    <string name="button_SignIn">Sign In</string>
    <string name="button_SignUp">Sign Up</string>
    <string name="button_Add">Add</string>
    <string name="button_Auto">Auto</string>
    <string name="button_Save">Save</string>
    <string name="button_Fetch">Fetch</string>
    <string name="button_OrderHistory">Order History</string>
    <string name="button_Upload">Upload</string>
    <string name="button_Update">Update</string>
    <string name="button_Replace">Replace</string>
    <string name="button_Reset">Reset</string>
    <string name="button_Payment">Payment</string>
    <string name="button_Remove">Remove</string>
    <string name="button_AddAll">Add All</string>
    <string name="button_RemoveAll">Remove All</string>
    <string name="button_Pay">Pay</string>
    <string name="button_AddSalesPerson">Sales Person</string>
    <string name="lbl_Dashboard">Dashboard</string>
    <string name="lbl_CurrentQty">Current Qty</string>
    <string name="lbl_NoData">No Data</string>
    <string name="lbl_OrderNumber">Order Number</string>
    <string name="lbl_Subtotal">Subtotal</string>
    <string name="lbl_TotalCoupon">Discount</string>
    <string name="lbl_ChangeDue">Change Due</string>
    <string name="lbl_TotalQty">Total Quantity</string>
    <string name="lbl_TotalCharge">Total Charge</string>
    <string name="lbl_TenderCash">Tender Cash</string>
    <string name="lbl_TotalTender">Total Tender</string>
    <string name="lbl_SalesTax">Sales Tax (T)</string>
    <string name="lbl_CustomerName">Customer Name</string>
    <string name="lbl_Department">Department</string>
    <string name="lbl_Reports">Reports</string>
    <string name="lbl_ProductList">Product List</string>
    <string name="lbl_ScanBarcode">Scan Barcode</string>
    <string name="lbl_DepartmentCode">Department Code</string>
    <string name="lbl_CompanyName">Company Name</string>
    <string name="lbl_PersonName">Person Name</string>
    <string name="lbl_Code">Code</string>
    <string name="lbl_Products">Products</string>
    <string name="lbl_ProductDetail">Product Detail</string>
    <string name="lbl_Qty">Qty</string>
    <string name="lbl_SKU">SKU</string>
    <string name="lbl_CustomerList">Customer Info</string>
    <string name="lbl_Male">Male</string>
    <string name="lbl_Female">Female</string>
    <string name="lbl_EmployeeList">Employee Info</string>
    <string name="lbl_BirthDate">Birthdate</string>
    <string name="lbl_Address">Address</string>
    <string name="lbl_City">City</string>
    <string name="lbl_State">State</string>
    <string name="lbl_Zip">Zip</string>
    <string name="lbl_Role">Role</string>
    <string name="lbl_Rate">Rate</string>
    <string name="lbl_PhoneNumber">Phone Number</string>
    <string name="lbl_UserId">User ID</string>
    <string name="lbl_Gender">Gender</string>
    <string name="lbl_EmailId">Email Id</string>
    <string name="lbl_Id">Id</string>
    <string name="lbl_OrderList">Order List</string>
    <string name="lbl_Devices">Devices</string>
    <string name="lbl_AddProduct">Add Product</string>
    <string name="lbl_EditProduct">Edit Product</string>
    <string name="lbl_OrderTotal">Order Total</string>
    <string name="lbl_OrderDetails">Order Details</string>
    <string name="lbl_DeviceDetails">Device Details</string>
    <string name="lbl_Category">Category</string>
    <string name="lbl_SubCategory">Sub Category</string>
    <string name="lbl_Add">Add</string>
    <string name="lbl_Edit">Edit</string>
    <string name="lbl_TopSellingProducts">Top Selling Products</string>
    <string name="lbl_LastSevenDaysSell">Last 7 days sell</string>
    <string name="lbl_Transactions">Transactions</string>
    <string name="lbl_BestHours">Best Hour/s</string>
    <string name="lbl_CompareMath">Compare Math</string>
    <string name="lbl_PromptPrice">Prompt for price</string>
    <string name="lbl_NewsLetter">Newsletter</string>
    <string name="lbl_UserInActive">User InActive</string>
    <string name="lbl_PromptQty">Prompt for Qty.</string>
    <string name="lbl_NonPLU">Non-plu Item</string>
    <string name="lbl_Active">Active</string>
    <string name="lbl_BasicInfo">Basic Info</string>
    <string name="lbl_CostPricing">Cost &amp; Pricing</string>
    <string name="lbl_UPCUpload">UPC &amp; Upload</string>
    <string name="lbl_UploadFile">Upload Your Files</string>
    <string name="lbl_FileShould">File should be Zip,Jpeg,Png</string>
    <string name="lbl_Percentage">%</string>
    <string name="lbl_Dollar">$</string>
    <string name="lbl_ManagePrice">Manage Price</string>
    <string name="lbl_Colon">:</string>
    <string name="lbl_InStoreStock">In-Store Stock</string>
    <string name="lbl_WareHouseStock">Warehouse Stock</string>
    <string name="lbl_Items">Item</string>
    <string name="lbl_Paid">Paid</string>
    <string name="lbl_Password">Password</string>
    <string name="lbl_SuperAdmin">Super Admin</string>
    <string name="lbl_Admin">Admin</string>
    <string name="lbl_Employee">Employee</string>
    <string name="lbl_Okay">Okay</string>
    <string name="lbl_Yes">Yes</string>
    <string name="lbl_No">No</string>
    <string name="lbl_InvalidLogin">Invalid login credentials</string>
    <string name="lbl_NotificationPermission">Notification Permission</string>
    <string name="lbl_PermissionRequired">Notification permission is required, Please allow notification permission from setting</string>
    <string name="lbl_SureLogOut">Want to logout?</string>
    <string name="lbl_Cancel">Cancel</string>
    <string name="lbl_Alert">Alert</string>
    <string name="lbl_Mac">Mac</string>
    <string name="lbl_AssignEmployee">Assign employee name</string>
    <string name="lbl_PermissionToShow">Notification permission is required, to show notification</string>
    <string name="lbl_SelectDepartment">Select Department</string>
    <string name="lbl_SelectBrand">Select Brand</string>
    <string name="lbl_SelectCategory">Select Category</string>
    <string name="lbl_SelectParentCategory">Select Parent Category</string>
    <string name="lbl_SelectUOM">Select UOM</string>
    <string name="lbl_SelectSpecificationType">Select Type</string>
    <string name="lbl_SelectTax">Select Tax Group</string>
    <string name="lbl_SelectSubCategories">Select Sub Category</string>
    <string name="lbl_SelectItemType">Select Item Type</string>
    <string name="lbl_SelectType">Select Type</string>
    <string name="lbl_SelectPack">Select Pack</string>
    <string name="lbl_SelectSize">Select Size</string>
    <string name="lbl_Card">Card</string>
    <string name="lbl_Cash">Cash</string>
    <string name="lbl_SalesSummary">Sales summary: Overview</string>
    <string name="lbl_SalesByPaymentType">Payment Type</string>
    <string name="lbl_GrossSales">Gross Sales</string>
    <string name="lbl_AverageSales">Average Sales</string>
    <string name="lbl_Sales">Sales</string>
    <string name="lbl_DiscountComps">Discount &amp; Comps</string>
    <string name="lbl_NetSales">Net Sales</string>
    <string name="lbl_Tips">Tips (Non-Cash)</string>
    <string name="lbl_Return">Return</string>
    <string name="lbl_TopItems">Top Items</string>
    <string name="lbl_TopCategories">Top Categories</string>
    <string name="lbl_TotalCollected">Total Collected</string>
    <string name="lbl_SomethingWrong">Something went wrong!!!</string>
    <string name="lbl_ChangePriceQty">Are you sure, you want to update %1$s?</string>
    <string name="lbl_DeletePermission">Are you sure, you want to delete %1$s?</string>
    <string name="lbl_CancelPermission">Are you sure, you want to Cancel %1$s?</string>
    <string name="lbl_PaymentPermission">Are you sure, you want to Continue without payment?</string>
    <string name="lbl_ProductNameValidation">You might be forget to add product name or product UPC!!!</string>
    <string name="lbl_Total">Total</string>
    <string name="lbl_BarcodeScannerStart">Barcode Scanner Started</string>
    <string name="lbl_NameMissing">Name is required!!!</string>
    <string name="lbl_CreateAccount">Don\'t have an account?</string>
</resources>