<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_bg"
    android:orientation="vertical"
    tools:context=".activity.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_gssp_logo" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputSize"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:autofillHints="name"
            android:background="@drawable/custom_register"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:hint="@string/hint_Name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGrey"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputSize"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="username"
            android:background="@drawable/custom_register"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:hint="@string/hint_Username"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGrey"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/editTextMobileNum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputSize"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="mobile"
            android:background="@drawable/custom_register"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:hint="@string/hint_MobileNo"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGrey"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputSize"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_register"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:hint="@string/lbl_EmailId"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGrey"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputSize"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="postalAddress"
            android:background="@drawable/custom_register"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:hint="@string/lbl_Address"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGrey"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputSize"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="password"
            android:background="@drawable/custom_register"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:hint="@string/lbl_Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGrey"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_15sdp" />

        <RadioGroup
            android:id="@+id/radioGrpRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioSuperAdmin"
                style="@style/radioButton"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_regular"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/lbl_SuperAdmin"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <RadioButton
                android:id="@+id/radioAdmin"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_regular"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/lbl_Admin"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <RadioButton
                android:id="@+id/radioEmployee"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_regular"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/lbl_Employee"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </RadioGroup>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputSize"
            android:layout_marginTop="@dimen/_10sdp"
            android:button="@drawable/selector_check"
            android:buttonTint="@color/pink"
            android:checked="true"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_5sdp"
            android:text="@string/lbl_NewsLetter"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/_12sdp"
            tools:ignore="RtlSymmetry" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/inputSize"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/button_clicked"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/button_SignUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

</LinearLayout>
