<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bar"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/GfG_full_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_210sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_gss_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputSize"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/custom_edittext"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:contentDescription="@string/hint_UserName"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_user" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.85"
            android:autofillHints="username"
            android:background="@color/float_transparent"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:hint="@string/hint_UserName"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:text="AndroidPOS"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputSize"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/custom_edittext"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:contentDescription="@string/hint_Password"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_padlock" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.85"
            android:autofillHints="password"
            android:background="@color/float_transparent"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:hint="@string/hint_Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="Android.123"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputSize"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/clicked"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/button_SignIn"
        android:textAllCaps="false"
        android:textColor="@color/base_color"
        android:textSize="@dimen/_15sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/lbl_CreateAccount"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/commonTextSize" />

        <TextView
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/button_SignUp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/commonTextSize" />

    </LinearLayout>


</LinearLayout>
