<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputSize"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_vertical"
        android:text="@string/lbl_UPCUpload"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/textSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/darkGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/detailed_text"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewUPC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:scrollbars="vertical"
            app:fastScrollEnabled="true"
            app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
            app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
            app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
            app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
            tools:itemCount="5"
            tools:listitem="@layout/adapter_upc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputSize"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUPCAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/inputSize"
            android:layout_weight="0.4"
            android:background="@drawable/header_text"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/button_Add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUPCAuto"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/inputSize"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="0.4"
            android:background="@drawable/button_clicked"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/button_Auto"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputSize"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center_vertical"
        android:text="@string/lbl_UploadFile"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/textSize"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/darkGrey"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/detailed_text"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageViewUpload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="0.2"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_upload" />

        <TextView
            android:id="@+id/textViewImageNumbers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@drawable/order_total"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/inputSize"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewFile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:text="@string/lbl_FileShould"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonUpload"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputSize"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_clicked"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/button_Upload"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:visibility="gone" />

</LinearLayout>
